--- a/src/model_tuning/observation.ipynb
+++ b/src/model_tuning/observation.ipynb
@@ -82,13 +82,13 @@
     "test_loader = DataLoader(test_set, batch_size=batch_size, shuffle=False)\n",
     "preprocess.torch_seed(seed)\n",
     "\n",
-    "# 38番目のデータを抽出\n",
+    "# get 38th image\n",
     "for images, labels in test_loader:\n",
     "    break\n",
     "image = images[37]\n",
     "label = labels[37]\n",
     "\n",
-    "# イメージを表示して確認\n",
+    "# show image\n",
     "plt.figure(figsize=(3, 3))\n",
     "w = image.numpy().copy()\n",
     "w2 = np.transpose(w, (1, 2, 0))\n",
