--- a/src/model_tuning/observation.ipynb
+++ b/src/model_tuning/observation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 学習済みモデルの観察"
+    "# Obseve trained model"
    ]
   },
   {
@@ -149,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "トラックだと誤認識していることがわかる（第2候補が車）"
+    "The model is misidentified as a truck."
    ]
   }
  ],
